# Mimic-Synth

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  REFACTOR_PLAN.md  SECURITY.md  analyze_audio.py  calibrate_synth.py  check_audio.py  compare_crane.py  convert_to_mono.py  defaults.py  enumerate_params.py  estimate_pitch.py  invert_and_render.py  pyproject.toml  pytest.ini  render_crane.py  requirements.txt  run_s02_s03_s04.sh  test_render.py  verify_crane.py  verify_render.py
build_instructions/: 01 Profile - OB-Xf.md  02 Capture - Hardware.md  04 Embed.md  06b Live.md  07 Refine VST Loop.md  08 Package.md  09 Quality Roadmap.md
docs/: 01 Profile - Juno 106.md  01 Profile - Novation Peak.md  02 Capture - VST.md  03 Dataset.md  05 Surrogate.md  06 Invert.md  06b Live.md  07 Refine.md  09 Quality Roadmap.md
s01_profiles/: obxf.yaml
s01_setup/: calibrate_synth.py  setup_project.py
s02_capture/: capture_v1.py  capture_v1_2.py
s03_dataset/: VERIFIER.md  __init__.py  build_dataset.py  manifest.py  quality.py  sequences.py  verify_dataset.py
s04_embed/: __init__.py  embed.py  index_dataset.py  verify_embeddings.py
s05_surrogate/: model.py  train.py  verify_surrogate.py
s06_invert/: grad_search.py  invert.py  stream_invert.py  validate.py
s06b_live/: stream_invert.py
s07_refine/: __init__.py  audio_compare.py  mono_utils.py  obxf_calibration.npz  target_analysis.py  vst_cmaes.py  vst_hill_climb.py
scripts/: analyze_audio.py  calibrate_synth.py  check_audio.py  compare_crane.py  convert_to_mono.py  enumerate_params.py  estimate_pitch.py  (+6 more)
(+56 files in other folders)
